Added docstrings to functions

--- a/airbnb_buenos_aires_analysis.ipynb
+++ b/airbnb_buenos_aires_analysis.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "airbnb buenos aires analysis.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMvp5+3gxpHKSeWKZPEAeUH"
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
